fix nav on mobile?

--- a/temp.css
+++ b/temp.css
@@ -35,6 +35,7 @@
     font-family: var(--font-primary);
     font-size: 16px;
     color: var(--text-black);
+
 }
 
 
@@ -44,15 +45,16 @@
     /* background-color: var(--text-white); */
     margin-top: 2px;
     margin-bottom: 2px;
+    overflow: hidden;
 } 
 .nav-bar {
     /* height: var(--nav-height); */
     /* height: auto; */
     width: 100%;
     background-color: var(--bg-primary);
-    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
 } 
 .wrapper {
     height: var(--wrapper-height);
@@ -76,6 +78,7 @@
      bottom: 0px;
      height: var(--footer-height);
      width: 100%;
+     overflow: hidden;
      /* background-color: #333; */
 }
 
